# Works_Exhibition_Flask

./: .env-example  .gitignore  .pre-commit-config.yaml  .prettierignore  123.py  Pipfile  Procfile  README.md  UC_SGSIM_py_controllor.py  docker-compose.yml  requirements.txt  run.py  uwsgi.ini
UC_SGSIM_py/: UC_SGSIM.py  __init__.py
app/: __init__.py
backend/: Dockerfile  Pipfile  Procfile  docker-entrypoint.sh  entrypoint.sh  manage.py  nginx.conf  nginx_django.conf  pyproject.toml  pytest.ini  requirements.txt  uwsgi.ini
backend/ZWeb_app/: asgi.py  settings.py  urls.py  uwsgi.ini  wsgi.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/deploy/: Procfile  uwsgi.ini
backend/sgsim/: apps.py  models.py  urls.py
backend/sgsim/api/: filters.py  paginations.py  serializers.py  sgsim.py  viewsets.py
backend/sgsim/migrations/: 0001_initial.py
backend/sgsim/tests/: viewsets_test.py
backend/sgsim_app/: apps.py  models.py
backend/sgsim_app/api/: serializers.py  sgsim.py  utils.py  viewsets.py
backend/sgsim_app/migrations/: 0001_initial.py
backend/static/figures/: .gitignore
backend/static/styles/: styles.css
backend/templates/: acheivement.html  author.html  base.html  home.html  sgsim.html  works.html
backend/templates/statistic/: statistic.html  statistic_count.html  statistic_date.html
backend/uc_sgsim/: apps.py
backend/users/: backend.py  mail.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: view_test.py
backend/utils/: exceptions.py  permissions.py
(+74 files in other folders)
