[tool.poetry]
name = "zweb"
version = "0.1.0"
description = ""
authors = ["Zncl2222 <3002shinning@gmail.com>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "==4.2.5"
djangorestframework = "==3.14.0"
pandas = "==2.1.1"
psycopg2-binary = "*"
django-environ = "*"
django-cors-headers = "*"
gunicorn = "*"
dj_static = "*"
uc-sgsim = "==1.2.8"
django-filter = "==23.3"
google-auth-oauthlib = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
coverage = "*"
pytest-django = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
